ingress-deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: deploy-app
    labels:
      app: nginx-deploy
spec:
  template: 
    metadata:
      name: nginx
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
  replicas: 3
  selector:
    matchLabels:
      app: nginx-deploy
