ingress-deploy/service-ingres.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-app
  labels:
    app: svc-app
spes:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 31089
      protocol: TCP
  selector:
    app: nginx-deploy
