ingress-deploy/services-deployment.yaml
## this is the example of NodePort
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  labels:
    app: svc-app
spec:
  type: NodePort
  ports:
    - name: http #service port
      port: 80
      targetPort: 80 # pods port
      nodePort: 31089 #nodes port
      protocol: TCP
  selector:
    app: nginx-deploy
