ingress-deploy/ingress-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ing
spec:
  defaultBackend:
    service:
      name: app-ing
      port:
        number: 80
